# sakata-api

./: Cargo.toml  LICENSE  README.md
migrations/2020-11-28-015312_create_cards/: down.sql  up.sql
migrations/2020-12-04-001307_create_player_card/: down.sql  up.sql
migrations/2020-12-06-050354_add_discord_info/: up.sql
migrations/2020-12-11-020643_create_tables/: down.sql  up.sql
src/: dao.rs  dbconfig.rs  dto.rs  error.rs  handlers.rs  macros.rs  main.rs  model.rs  s3.rs  schema.rs  types.rs  utils.rs
src/base_card/: dao.rs  drawer.rs  handlers.rs  mod.rs
src/party/: dao.rs  mod.rs
src/player/: dao.rs  handlers.rs  mod.rs
src/player_card/: dao.rs  mod.rs
src/types/: json_req.rs  json_res.rs  mod.rs  model.rs
