[package]
name = "sakata-api"
version = "0.1.0"
authors = ["bruno319 <brunovieira319@hotmail.com>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0"
diesel = { version = "1.4.4", features = ["r2d2","mysql"] }
uuid = { version = "0.8", default-features = false, features = ["v4"] }
env_logger = "0.8.2"
log = "0.4.11"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
jikan-rs = { git = "https://github.com/bruno319/jikan-rs" }