[package]
name = "sakata-api"
version = "0.1.0"
authors = ["bruno319 <brunovieira319@hotmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.1"
actix-cors = "0.5.3"
actix-multipart = "0.3.0"
diesel = { version = "1.4.6", features = ["r2d2","mysql"] }
rand = "0.7.3"
env_logger = "0.8.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4.11"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
jikan-rs = { git = "https://github.com/bruno319/jikan-rs" }
rusoto_s3 = "0.43.0"
rusoto_core = "0.43.0"
bytes = { version = "0.5", features = ["serde"] }
futures = "0.3.1"